Removed commented code (anyone that wants to give sub-tree collapsing a try?), Added some documentation, added handle for dragging, fixed navigation/enable toggling.

--- a/feincms/media/feincms/fein_tree.css
+++ b/feincms/media/feincms/fein_tree.css
@@ -1,3 +1,14 @@
+.drag_handle {
+	width: 16px;
+	height: 16px;
+	background: url(images/arrow-move.png);
+	display: inline-block;
+}
+
+.drag_handle:hover {
+	cursor: move;
+}
+
 .drag_order img {
 	cursor: move;
 }
